fix(styles): left-align stat card labels above select dropdowns

--- a/styles/items/item-sheet.scss
+++ b/styles/items/item-sheet.scss
@@ -65,6 +65,13 @@
 					padding: 0;
 				}
 			}
+
+			&:has(select) .title-container {
+				justify-content: flex-start;
+				padding-left: 0.25rem;
+
+				h4 { width: 100%; }
+			}
 		}
 	}
 }
